--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  padding: 0;
 }
 
 .header {
@@ -14,18 +15,235 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  display: flex;
+  position: relative;
+  background-color: #f2f2f2;
 }
-
+.logo_place_header{
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  width: 730px;
+}
+.header__title{
+  display: flex;
+  width: 730px;
+  align-items: center;
+  font-size: 102px;
+  font-weight: 600;
+  margin-left: 64px;
+  z-index: 2;
+}
+.header__subtitle{
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  width: 388px;
+  color: #000;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 2;
+}
+.header__link{
+  color: #2f80ed;
+  text-decoration: none;
+  
+}
+.header__main-illustration{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 765px;
+  z-index: 1;
+}
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+}
+.description{
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
 }
 
+.two-columns{
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+}
+.two-columns__brief{
+  color: #2f80ed;
+  width: 175px;
+  font-size: 18px;;
+  line-height: 1.2;
+  font-weight: normal;
+  margin:0;
+}
+.two-columns__main-text{
+  min-width: 784px;
+  width: 80%;
+}
+.two-columns__paragraph{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0;
+}
+.span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+  
+}
+.two-columns__paragraph_space_top_bottom{
+  margin: 30px 0;
+}
+.digits{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 100px;
+}
+.section-title{
+  margin: 0 0 20px 0;
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.section-subtitle{
+  width: 60%;
+  margin:0;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.table{
+  display: flex;
+  width: 1100px;
+  justify-content: space-between;
+  align-content: flex-start;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0; 
+}
+.table__cell{
+  width: 250px;
+  margin-top: 60px;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+.table__heading{
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  
+}
+.table__text{
+  margin: 20px 0 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  
+}
+.feynman{
+  background:url(../images/feynman.png) no-repeat bottom left #f2f2f2;
+  min-height: 890px;
+  padding-top: 100px;
+  margin-top: 100px;
+  box-sizing: border-box;
+  position: relative;
+}
+.feynman__title{
+  width: 648px;
+  text-align: center;
+  margin: 0 auto;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+.feynman__subtitle{
+  text-align: center;
+  margin-top: 70px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+.feynman__link{
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
+}
+.kaufman{
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #000;
+  box-sizing: border-box;
+  padding: 90px 0;
+}
+.section-title_theme_dark{
+  color: #fff;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  margin: 0 0 20px 0;
+  text-align: center;
+  width: 60%;
+}
+.section-subtitle_theme_dark{
+  color: #fff;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  margin:0;
+  text-align: center;
+}
+.table_theme_dark{
+  z-index: 1;
+}
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  list-style: none;
+  padding: 0;
+}
+.kaufman__triangle{
+  position: absolute;
+  right: -210px;
+  top: 0;
+  width: 877px;
+  height: 877px;
+}
+.table__heading_theme_dark{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+.table__text_theme_dark{
+  margin: 20px 0 0 0;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.12;
 }
