--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -24,6 +28,7 @@
   top: 30px;
   left: 64px;
   width: 730px;
+  z-index: 4;
 }
 .header__title{
   display: flex;
@@ -31,8 +36,10 @@
   align-items: center;
   font-size: 102px;
   font-weight: 600;
+  line-height: 96px;
+  list-style: none;
   margin-left: 64px;
-  z-index: 2;
+  z-index: 3;
 }
 .header__subtitle{
   position: absolute;
@@ -41,19 +48,25 @@
   width: 388px;
   color: #000;
   font-size: 18px;
+  line-height: 25px;
   font-weight: normal;
   z-index: 2;
+  padding: 0;
+  margin: 0;
 }
 .header__link{
   color: #2f80ed;
   text-decoration: none;
-  
+}
+.header__link:hover{
+  text-decoration: underline;
 }
 .header__main-illustration{
   position: absolute;
   bottom: 0;
   right: 0;
   width: 765px;
+  height: 608px;
   z-index: 1;
 }
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -70,7 +83,6 @@
   justify-content: center;
   margin-top: 100px;
 }
-
 .two-columns{
   display: flex;
   width: 80%;
@@ -79,7 +91,7 @@
 .two-columns__brief{
   color: #2f80ed;
   width: 175px;
-  font-size: 18px;;
+  font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
   margin:0;
@@ -94,14 +106,13 @@
   font-weight: normal;
   margin: 0;
 }
-.span-accent{
+.two-columns__paragraph:nth-of-type(2){
+  margin: 30px 0;
+}
+.two-columns__span-accent{
   line-height: 34px;
   font-size: 24px;
   font-weight: 600;
-  
-}
-.two-columns__paragraph_space_top_bottom{
-  margin: 30px 0;
 }
 .digits{
   display: flex;
@@ -189,6 +200,9 @@
   color: #2f80ed;
   text-decoration: none;
 }
+.feynman__link:hover{
+  text-decoration: underline;
+}
 .kaufman{
   position: relative;
   overflow: hidden;
@@ -228,13 +242,23 @@
   margin-top: 80px;
   list-style: none;
   padding: 0;
+  flex-direction: row;
 }
-.kaufman__triangle{
+/*.kaufman__triangle{
   position: absolute;
   right: -210px;
   top: 0;
   width: 877px;
   height: 877px;
+}*/
+.kaufman__triangle{
+  background: url(../images/kaufman-triangle.svg) no-repeat;
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  right: -210px;
+  top: 0;
+  background-size: cover;
 }
 .table__heading_theme_dark{
   line-height: 1.15;
@@ -246,4 +270,70 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 1.12;
+}
+.footer{
+  min-height: 350px;
+  background-color: #000;
+  padding: 60px 0 40px 0;
+  box-sizing: border-box;
+  justify-content: center;
+  display: flex;
+}
+.footer__columns{
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__column_content_copyright{
+  flex-basis: 711px;
+  flex-direction: column;
+  justify-content: space-between;
+  display: flex;
+}
+.logo_place_footer{
+  width: 228px;
+  height: 32px;
+}
+.footer__author{
+  color: #fff;
+  line-height: 25px;
+  font-size: 18px;;
+  font-weight: normal;
+  margin: 18px 0;
+}
+.footer__column_content_info{
+  padding: 0;
+}
+.footer__column-heading{
+  color: #fff;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  list-style: none;
+  margin: 0 0 20px 0;
+  padding: 0;
+}
+.footer__column-links{
+  color: #fff;
+  list-style: none;
+}
+.footer__column-links:last-child{
+  margin-bottom: 16px;
+}
+.footer__column-link{
+  color: #fff;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.footer__column-link:hover{
+  text-decoration: underline;
+}
+.footer__column_content_social{
+  padding: 0;
+}
+.footer__social-icon{
+  margin-right: 10px;
+  vertical-align: middle;
 }
