--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-*{
-  margin: 0;
-  padding: 0;
-}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -13,7 +9,6 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
   padding: 0;
 }
-
 .header {
   height: 100vh;
   min-height: 600px;
@@ -27,7 +22,8 @@
   position: absolute;
   top: 30px;
   left: 64px;
-  width: 730px;
+  width: 228px;
+  height: 32px;
   z-index: 4;
 }
 .header__title{
@@ -40,6 +36,7 @@
   list-style: none;
   margin-left: 64px;
   z-index: 3;
+  color: #000;
 }
 .header__subtitle{
   position: absolute;
@@ -68,6 +65,7 @@
   width: 765px;
   height: 608px;
   z-index: 1;
+  object-fit: cover; 
 }
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
@@ -86,6 +84,7 @@
 .two-columns{
   display: flex;
   width: 80%;
+  min-width: 784px;
   justify-content: space-between;
 }
 .two-columns__brief{
@@ -105,8 +104,9 @@
   font-size: 24px;
   font-weight: normal;
   margin: 0;
+  color: #000;
 }
-.two-columns__paragraph:nth-of-type(2){
+.two-columns__paragraph:nth-of-type(2n){
   margin: 30px 0;
 }
 .two-columns__span-accent{
@@ -128,7 +128,6 @@
   font-size: 60px;
   font-weight: 600;
 }
-
 .section-subtitle{
   width: 60%;
   margin:0;
@@ -158,14 +157,12 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
-  
 }
 .table__text{
   margin: 20px 0 0 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  
 }
 .feynman{
   background:url(../images/feynman.png) no-repeat bottom left #f2f2f2;
@@ -209,11 +206,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: #000;
+  background-color: #1f1f1f;
   box-sizing: border-box;
   padding: 90px 0;
 }
-.section-title_theme_dark{
+.section-title_theme-dark{
   color: #fff;
   line-height: 1.15;
   font-size: 60px;
@@ -222,7 +219,7 @@
   text-align: center;
   width: 60%;
 }
-.section-subtitle_theme_dark{
+.section-subtitle_theme-dark{
   color: #fff;
   line-height: 34px;
   font-size: 24px;
@@ -231,11 +228,11 @@
   margin:0;
   text-align: center;
 }
-.table_theme_dark{
-  z-index: 1;
+.table_theme-dark{
+  z-index: 2;
 }
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.table__cell_theme-dark {
   width: 200px;
   color: white;
   margin-right: 0;
@@ -244,13 +241,6 @@
   padding: 0;
   flex-direction: row;
 }
-/*.kaufman__triangle{
-  position: absolute;
-  right: -210px;
-  top: 0;
-  width: 877px;
-  height: 877px;
-}*/
 .kaufman__triangle{
   background: url(../images/kaufman-triangle.svg) no-repeat;
   width: 877px;
@@ -259,13 +249,14 @@
   right: -210px;
   top: 0;
   background-size: cover;
+  z-index: 1;
 }
-.table__heading_theme_dark{
+.table__heading_theme-dark{
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
 }
-.table__text_theme_dark{
+.table__text_theme-dark{
   margin: 20px 0 0 0;
   font-size: 18px;
   font-weight: normal;
@@ -273,7 +264,7 @@
 }
 .footer{
   min-height: 350px;
-  background-color: #000;
+  background-color: #1f1f1f;
   padding: 60px 0 40px 0;
   box-sizing: border-box;
   justify-content: center;
@@ -284,7 +275,7 @@
   display: flex;
   justify-content: space-between;
 }
-.footer__column_content_copyright{
+.footer__column_content-copyright{
   flex-basis: 711px;
   flex-direction: column;
   justify-content: space-between;
@@ -301,7 +292,7 @@
   font-weight: normal;
   margin: 18px 0;
 }
-.footer__column_content_info{
+.footer__column_content-info{
   padding: 0;
 }
 .footer__column-heading{
@@ -316,6 +307,8 @@
 .footer__column-links{
   color: #fff;
   list-style: none;
+  display: flex;
+  flex-direction: column;
 }
 .footer__column-links:last-child{
   margin-bottom: 16px;
@@ -330,7 +323,7 @@
 .footer__column-link:hover{
   text-decoration: underline;
 }
-.footer__column_content_social{
+.footer__column_content-social{
   padding: 0;
 }
 .footer__social-icon{
