--- a/styles/style.css
+++ b/styles/style.css
@@ -1,141 +1,34 @@
-.page {
-  min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
-  max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-  padding: 0;
+@keyframes rotation{
+  from {
+    transform:rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
 }
-.header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  /* выше установили ограничения для секции */
-  display: flex;
-  position: relative;
-  background-color: #f2f2f2;
+
+
+
+
+.iframe{
+  width: 515px;
+  height: 316px;
+  margin-right: 20px;
+  border: 0;
+  transform: translateY(50px);
 }
-.logo_place_header{
-  position: absolute;
-  top: 30px;
-  left: 64px;
-  width: 228px;
-  height: 32px;
-  z-index: 4;
+.iframe:nth-child(2n){
+  margin-right: 0;
 }
-.header__title{
-  display: flex;
-  width: 730px;
-  align-items: center;
-  font-size: 102px;
-  font-weight: 600;
-  line-height: 96px;
-  list-style: none;
-  margin-left: 64px;
-  z-index: 3;
-  color: #000;
-}
-.header__subtitle{
-  position: absolute;
-  bottom: 30px;
-  left: 64px;
-  width: 388px;
-  color: #000;
-  font-size: 18px;
-  line-height: 25px;
-  font-weight: normal;
-  z-index: 2;
-  padding: 0;
-  margin: 0;
-}
-.header__link{
-  color: #2f80ed;
-  text-decoration: none;
-}
-.header__link:hover{
-  text-decoration: underline;
-}
-.header__main-illustration{
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 765px;
-  height: 608px;
-  z-index: 1;
-  object-fit: cover; 
-}
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
-  background-color: #2f80ed;
-  position: absolute;
-  top: 64px;
-  right: 0;
-}
-.description{
-  display: flex;
-  justify-content: center;
-  margin-top: 100px;
-}
-.two-columns{
-  display: flex;
-  width: 80%;
-  min-width: 784px;
-  justify-content: space-between;
-}
-.two-columns__brief{
-  color: #2f80ed;
-  width: 175px;
-  font-size: 18px;
-  line-height: 1.2;
-  font-weight: normal;
-  margin:0;
-}
-.two-columns__main-text{
-  min-width: 784px;
-  width: 80%;
-}
-.two-columns__paragraph{
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  margin: 0;
-  color: #000;
-}
-.two-columns__paragraph:nth-of-type(2n){
-  margin: 30px 0;
-}
-.two-columns__span-accent{
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: 600;
-}
+
 .digits{
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 100px;
 }
-.section-title{
-  margin: 0 0 20px 0;
-  width: 60%;
-  text-align: center;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
-}
-.section-subtitle{
-  width: 60%;
-  margin:0;
-  text-align: center;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-}
+
+
 .table{
   display: flex;
   width: 1100px;
@@ -164,11 +57,79 @@
   font-size: 18px;
   font-weight: normal;
 }
+.khan{
+  padding-top: 105px;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  background-color: #f2f2f2;
+}
+.khan__container{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+.khan__author{
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  margin: 0;
+}
+.khan__title{
+  margin: 0 0 50px 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+.khan__quote{
+  width: 790px;
+  margin: 0 0 36px 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.khan__quote-author{
+  margin: 0 0 10px 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+.khan__quote-author-subline{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0;
+}
+.khan__book-container{
+  display: flex;
+  margin-top: 68px;
+}
+.khan__book-pic{
+  margin-right: 48px;
+  width: 608px;
+  height: 620px;
+  object-fit: cover;
+  object-position: top;
+}
+.khan__buy-link{
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #2f80ed;
+  align-self: flex-start;
+  margin: 0;
+  padding: 0;
+  transition: opacity .3s linear, transform .3s linear;
+}
+.khan__buy-link:hover{
+  opacity: 0.7;
+  transform:translate(20px, 0);
+}
 .feynman{
   background:url(../images/feynman.png) no-repeat bottom left #f2f2f2;
   min-height: 890px;
   padding-top: 100px;
-  margin-top: 100px;
   box-sizing: border-box;
   position: relative;
 }
@@ -197,9 +158,11 @@
   font-weight: normal;
   color: #2f80ed;
   text-decoration: none;
+  transition: opacity .4s linear, transform .4s linear;
 }
 .feynman__link:hover{
-  text-decoration: underline;
+  opacity: 0.5;
+  transform: skew(-20deg);
 }
 .kaufman{
   position: relative;
@@ -213,22 +176,10 @@
 }
 .section-title_theme_dark{
   color: #fff;
-  /*line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
-  margin: 0 0 20px 0;
-  text-align: center;
-  width: 60%;*/
 }
 .section-subtitle_theme_dark{
   color: #fff;
   z-index: 2;
-  /*line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  width: 60%;
-  margin:0;
-  text-align: center;*/
 }
 .table_theme_dark{
   z-index: 2;
@@ -250,87 +201,33 @@
   top: 0;
   background-size: cover;
   z-index: 1;
+  animation: rotation linear 20s infinite;
 }
 .table__heading_theme_dark{
-  /*line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;*/
   color: white;
 }
 .table__text_theme_dark{
-  /*margin: 20px 0 0 0;
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 1.12;*/
   color: white;
 }
-.footer{
-  min-height: 350px;
-  background-color: #1f1f1f;
-  padding: 60px 0 40px 0;
-  box-sizing: border-box;
+.resources{
+  margin-top: 100px;
+  display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+}
+.resources__logo{
+  width: 1100px;
   display: flex;
+  margin: 80px 0 217px 0;
 }
-.footer__columns{
-  width: 90%;
+.resources__logo-zone{
+  width: 270px;
+  height: 38px;
+  justify-content: space-around;
   display: flex;
-  justify-content: space-between;
+  transition: opacity .3s linear, transform .3s linear;
 }
-.footer__column{
-  display: flex;
-  flex-direction: column;
-}
-.footer__column_content_copyright{
-  flex-basis: 711px;
-  justify-content: space-between;
-}
-.logo_place_footer{
-  width: 228px;
-  height: 32px;
-}
-.footer__author{
-  color: #fff;
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  margin: 18px 0;
-}
-.footer__column_content_info{
-  padding: 0;
-}
-.footer__column-heading{
-  color: #fff;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: 600;
-  list-style: none;
-  margin: 0 0 20px 0;
-  padding: 0;
-}
-.footer__column-links{
-  color: #fff;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-}
-.footer__column-links:last-child{
-  margin-bottom: 16px;
-}
-.footer__column-link{
-  color: #fff;
-  text-decoration: none;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-}
-.footer__column-link:hover{
-  text-decoration: underline;
-}
-.footer__column_content_social{
-  padding: 0;
-}
-.footer__social-icon{
-  margin-right: 10px;
-  vertical-align: middle;
+.resources__logo-zone:hover{
+  opacity: 0.7;
+  transform: scale(1.2);
 }
