--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,12 +1,13 @@
 .header__title{
     display: flex;
     width: 730px;
-    align-items: center;
+    align-self: center;
     font-size: 102px;
     font-weight: 600;
     line-height: 96px;
     list-style: none;
-    margin-left: 64px;
+    margin: 0 0 0 64px;
     z-index: 3;
     color: #000;
+  
   }
