--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -4,7 +4,8 @@
     font-weight: normal;
     margin: 0;
     color: #000;
+    margin: 0 0 30px 0;
   }
-  .two-columns__paragraph:nth-of-type(2n){
-    margin: 30px 0;
+  .two-columns__paragraph:last-child{
+    margin: 0;
   }
