--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,10 +1,9 @@
-.iframe{
+.video__iframe{
     width: 515px;
     height: 316px;
     margin-right: 20px;
     border: 0;
-    transform: translateY(50px);
   }
-  .iframe:nth-child(2n){
+  .video__iframe:nth-child(2n){
     margin-right: 0;
   }
